dev_deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sso
  namespace: #{DEV_APP_NAMESPACE}#
spec:
  selector:
    matchLabels:
      application: sso
      deploymentConfig: sso
  template:
    metadata:
      name: sso
      labels:
        application: sso
        deploymentConfig: sso
        maistra.io/expose-route: 'true'
        backstage.io/kubernetes-id: sso
    spec:
      volumes:
        - name: sso-x509-https-volume
          secret:
            secretName: sso-x509-https-secret
            defaultMode: 420
        - name: sso-x509-jgroups-volume
          secret:
            secretName: sso-x509-jgroups-secret
            defaultMode: 420
        - name: service-ca
          configMap:
            name: sso-service-ca
            defaultMode: 420
      containers:
        - resources:
            limits:
              cpu: #{DEV_CPU_LIMIT}#
              memory: #{DEV_MEMORY_LIMIT}#
            requests:
              cpu: #{DEV_CPU_REQUEST}#
              memory: #{DEV_MEMORY_REQUEST}#
          readinessProbe:
            exec:
              command:
                - /bin/bash
                - '-c'
                - /opt/eap/bin/readinessProbe.sh
            initialDelaySeconds: 120
            timeoutSeconds: 5
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: sso
          livenessProbe:
            exec:
              command:
                - /bin/bash
                - '-c'
                - /opt/eap/bin/livenessProbe.sh
            initialDelaySeconds: 120
            timeoutSeconds: 5
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: jolokia
              containerPort: 8778
              protocol: TCP
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
            - name: ping
              containerPort: 8888
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: sso-x509-https-volume
              readOnly: true
              mountPath: /etc/x509/https
            - name: sso-x509-jgroups-volume
              readOnly: true
              mountPath: /etc/x509/jgroups
            - name: service-ca
              readOnly: true
              mountPath: /var/run/configmaps/service-ca
          terminationMessagePolicy: File
          image: 'ocpreg.azurecr.io/keycloak:#{Build.BuildNumber}#'
      restartPolicy: Always
      terminationGracePeriodSeconds: 75
      imagePullSecrets:
        - name: ocpreg
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: "sso-x509-https-secret"
  labels:
    backstage.io/kubernetes-id: sso
  name: sso
  namespace: #{DEV_APP_NAMESPACE}#
spec:
  ports:
  - port: 8443
    name: https
    protocol: TCP
    targetPort: 8443
  selector:
    application: sso
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The JGroups ping port for clustering.
    service.alpha.kubernetes.io/tolerate-unready-endpoints: 'true'
    service.alpha.openshift.io/serving-cert-secret-name: sso-x509-jgroups-secret
  labels:
    backstage.io/kubernetes-id: sso
  name: sso-ping
  namespace: #{DEV_APP_NAMESPACE}#
spec:
  ports:
  - port: 8888
    name: ping
    protocol: TCP
    targetPort: 8888
  selector:
    application: sso
  clusterIP: None
  clusterIPs:
    - None
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sso
  namespace: #{DEV_APP_NAMESPACE}#
  labels:
    backstage.io/kubernetes-id: sso
spec:
  host: sso-#{APP_NAMESPACE}#.#{HOST_NAME}#
  tls:
    termination: reencrypt
  to:
    name: sso
